--- a/html.html
+++ b/html.html
@@ -19,7 +19,7 @@
 			  font-weight: 500;
 			}
 			.scene.one{
-			  background-image: url(landing1.jpg);
+			  background-image: url(landing1.jpg.jpg);
 			}
 			.scene.two{
 			  background-image: url(img/heic1501a.jpg);
